--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.7.5
+certifi==2021.10.8
+charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
 Flask==2.0.2
@@ -8,6 +10,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.8.2
 importlib-resources==5.4.0
 itsdangerous==2.0.1
@@ -16,7 +19,9 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 psycopg2==2.9.2
 python-dotenv==0.19.2
+requests==2.26.0
 SQLAlchemy==1.4.28
+urllib3==1.26.7
 Werkzeug==2.0.2
 WTForms==3.0.0
 zipp==3.6.0
